# agnet

./: .gitignore  AGENTS.md  CLAUDE_REVIEW_BRIEF.md  CLAUDE_REVIEW_MEMO.md  IMPLEMENTATION_PLAN.md  README.md  ai_dev_system_design.md  codex-login.bat  codex-login.ps1  codex-login.sh  codex-policy.toml  start.bat  start.ps1  start.sh
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/adapters/: __init__.py  codex_runner.py  event_sink.py  git_workspace.py  learning_registry.py  sqlite_store.py
backend/app/api/: repos.py  task_intake.py  tasks.py  websocket.py  workspaces.py
backend/app/bootstrap/: __init__.py  codex_sidecar.py  runtime.py
backend/app/core/: __init__.py  codex_contract.py  codex_project_config.py  contracts.py  phases.py  policies.py  project_policy.py  prompt_library.py  repo_profile.py  repo_service.py  task_commands.py  task_intake.py  task_learning.py  task_orchestrator.py  workflow.py  workspace_service.py
backend/app/prompts/: critique.md  implement.md  plan.md  review.md  test.md
backend/app/services/: codex_agent.py  git_manager.py  logger.py  orchestrator.py  worker.py
backend/tests/: test_codex_agent.py  test_codex_contract.py  test_codex_project_config.py  test_codex_runner.py  test_git_manager.py  test_project_policy.py  test_repo_profile.py  test_repo_schemas.py  test_repo_service.py  test_runtime.py  test_task_command_service.py  test_task_intake_service.py  test_task_learning.py  test_tasks_api.py  test_worker_pool.py  test_workflow_engine.py  test_workspace_service.py
(+97 files in other folders)
