[project]
name = "ai-dev-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "aiofiles>=24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-httpx"]
